# integra7frontend

./: README.md
src/: CMakeLists.txt  acpianoeditor.cpp  acpianoeditor.h  acpianoeditor.ui  asyncoperations.cpp  asyncoperations.h  colorcheckbutton.cpp  colorcheckbutton.h  integra7chorus.cpp  integra7chorus.h  integra7device.cpp  integra7device.h  integra7drumcompeq.cpp  integra7drumcompeq.h  integra7frontend.cpp  integra7frontend.qrc  integra7mainwindow.cpp  integra7mainwindow.h  integra7mainwindow.ui  integra7mastereq.cpp  integra7mastereq.h  integra7parameterset.cpp  integra7parameterset.h  integra7part.cpp  integra7part.h  integra7parteq.cpp  integra7parteq.h  integra7pcmdrumkitcommon.cpp  integra7pcmdrumkitcommon.h  integra7pcmdrumkitcommon2.cpp  integra7pcmdrumkitcommon2.h  integra7pcmdrumkitcommoncompeq.cpp  integra7pcmdrumkitcommoncompeq.h  integra7pcmdrumkitcommonmfx.cpp  integra7pcmdrumkitcommonmfx.h  integra7pcmdrumkitpartial.cpp  integra7pcmdrumkitpartial.h  integra7pcmsynthtonecommon.cpp  integra7pcmsynthtonecommon.h  integra7pcmsynthtonecommon2.cpp  (+51 more)
src/images/: FrontendLogo
src/presets/: ExPCM.inc  ExPCMDrums.inc  ExSN1.inc  ExSN2.inc  ExSN3.inc  ExSN4.inc  ExSN5.inc  GM2.inc  GM2Drums.inc  GM2_1.inc  GM2_2.inc  GM2_3.inc  GM2_4.inc  NoteNames.inc  PCMDrum.inc  PCMSynth.inc  SNAInstByteList.inc  SNAInstruments.inc  SNAcoustic.inc  SNDrums.inc  SNSynth.inc  SRX-01.inc  SRX-01Drum.inc  SRX-02.inc  SRX-03.inc  SRX-03Drum.inc  SRX-04.inc  SRX-05.inc  SRX-05Drum.inc  SRX-06.inc  SRX-06Drum.inc  SRX-07.inc  SRX-07Drums.inc  SRX-08.inc  SRX-08Drums.inc  SRX-09.inc  SRX-09Drums.inc  SRX-10.inc  SRX-11.inc  SRX-12.inc
